# vsmc_test

./: CMakeLists.txt  generate_data.R  main.cpp
